Hide spin buttons on timer inputs to prevent two-digit cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -155,3 +155,14 @@ button {
   animation: dance 0.8s ease-in-out infinite;
   transform-origin: bottom center;
 }
+
+/* Hide number input arrows */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
